# battery_cell

./: .gitignore  README.md  battery_cell_moveit_config.zip.backup  deps.repos
battery_cell_description/: CMakeLists.txt  package.xml
battery_cell_description/config/: bt_config.yaml  ethercat_utils_config.yaml  omron_ros2_controllers.yaml  ros2_controller_config.yaml  ros_bridge_config.yaml  skills_config.yaml  trajectory.yaml  view_cell.rviz
battery_cell_description/launch/: bridge.py  bt_executer.launch.py  calibrate.launch  calibrate.launch.py  display.launch  display.launch.py  omron_integration.launch.py  start.launch.py  trajectory_loader_server.launch.py  upload.launch
battery_cell_description/meshes/: Hole_60.STL  Hole_60_big.STL  battery_holder.STL  cambio_tool_comau.STL  cambio_tool_kuka.STL  sensor.STL  sensor_flange_robot_side.STL  sensor_flange_sensor_side.STL
battery_cell_description/scripts/: calibrate_omron.py  clock_node.py
battery_cell_description/trees/: demo_tree.xml  main_tree.xml  subtree_cover_and_suction_drop.xml  subtree_cover_drop.xml  subtree_omron.xml  subtree_photoneo_and_screw.xml  subtree_photoneo_drop.xml  subtree_photoneo_scan.xml  subtree_screwdriver_drop.xml  subtree_screwdriver_hook.xml  subtree_spreader_drop.xml  subtree_spreader_hook.xml  subtree_spreader_hook_and_approach.xml  subtree_spreader_on.xml  subtree_suction_approach.xml  subtree_suction_drop.xml  subtree_suction_hook.xml  subtree_suction_hook_and_approach.xml  subtree_suction_on.xml  subtree_tonnopinza_hook.xml  subtree_unscrew.xml  test_tree.xml
(+140 files in other folders)
